--- a/site/src/assets/scss/global/variables.scss
+++ b/site/src/assets/scss/global/variables.scss
@@ -5,14 +5,14 @@
 
   /* Background Colors */
   --color-bg: #fff;
-  --color-bg-secondary: #f7f7f7;
-  --color-bg-accent: rgb(174, 182, 225);
-  --color-bg-hover: #f3f4f6cc;
+  --color-bg-secondary: #ffffff;
+  --color-bg-accent: rgb(77, 230, 31);
+  --color-bg-hover: #d7d7d7cc;
 
   /* Text and Border Colors */
   --color-text: #222;
   --color-text-alt: #fff;
-  --color-text-gray: #6b7280;
+  --color-text-gray: #7e8696;
   --color-border: rgb(0 0 0 / 6%);
 
   /* Status Colors */
