--- a/site/src/assets/scss/global/utilites.scss
+++ b/site/src/assets/scss/global/utilites.scss
@@ -17,7 +17,7 @@
 }
 
 .gradient-text {
-  background: linear-gradient(130deg, #5183f5, #af002d 41.07%, #c79191 76.05%);
+  background: linear-gradient(130deg, #738A76, #ff00d4 41.07%, #bddf35 76.05%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
